--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/ramda": "^0.26.9",
     "cz-conventional-changelog": "^2.1.0",
     "jest": "latest",
-    "ramda": "latest",
     "standard-version": "^4.4.0",
     "ts-jest": "latest",
     "tslint": "latest",
@@ -35,5 +34,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "ramda": "^0.26.1"
   }
 }
